Link Fix Student Packages

--- a/corporate.html
+++ b/corporate.html
@@ -167,7 +167,7 @@
             <li>Fast setup for departments & orgs</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
-            <a class="btn btn-dark btn-pill" href=student-packages.html">VIEW PACKAGES</a>
+            <a class="btn btn-dark btn-pill" href="student-packages.html">VIEW PACKAGES</a>
             <a class="btn btn-pill btn-outline" href="login.html">WORK WITH ME</a>
           </div>
         </div>
