Link Fix Student Packages Online

--- a/student-packages.html
+++ b/student-packages.html
@@ -342,11 +342,11 @@
 
             <div class="features-label">Includes</div>
             <ul class="features">
-              <li><span class="check">✓</span> <strong>9 x 30-minute</strong> pre-recorded classes (Hatha + restorative emphasis)</li>
+              <li><span class="check">✓</span> <strong>9 x 30-minute virtual classes (Hatha, Power Vinyasa & Restorative)</li>
               <li><span class="check">✓</span> <strong>Guided usage plan</strong> (exactly what to take, when, + why)</li>
-              <li><span class="check">✓</span> Themes: posture + tech neck, stress relief, sleep support, study breaks</li>
+              <li><span class="check">✓</span> Themes: strength building, stress relief, rest & recovery support</li>
               <li><span class="check">✓</span> Unlimited access for students for the semester</li>
-              <li><span class="check">✓</span> Simple launch toolkit (email copy + 1 promo graphic)</li>
+              <li><span class="check">✓</span> Simple launch toolkit (3 short-form promotional videos for school socials)</li>
             </ul>
 
             <div class="plan-actions">
@@ -382,7 +382,7 @@
               <li><span class="check">✓</span> Everything in Starter</li>
               <li><span class="check">✓</span> <strong>1 live kickoff class</strong> (30 minutes) + intro to the guided plan</li>
               <li><span class="check">✓</span> <strong>30-minute live Q&amp;A</strong> with Lisa right after the kickoff</li>
-              <li><span class="check">✓</span> Optional athlete-focused framing during kickoff (resilience + recovery)</li>
+              <li><span class="check">✓</span> Option for 3 of the 9 classes to be student athlete-focused (mental health; resilience + recovery)</li>
             </ul>
 
             <div class="plan-actions">
@@ -410,7 +410,7 @@
             </div>
 
             <p class="plan-desc">
-              Your complete “signature” offer: on-demand curriculum + weekly live support + weekly Q&amp;A time with an alum.
+              Your complete “signature” offer: on-demand curriculum + weekly live support + weekly Q&amp;A time with an alum + 10 promotional short-form videos.
             </p>
 
             <div class="features-label">Includes</div>
@@ -419,7 +419,7 @@
               <li><span class="check">✓</span> <strong>Weekly live 30-min class</strong> (for the semester)</li>
               <li><span class="check">✓</span> <strong>Weekly 30-min “Life with Lisa” Q&amp;A</strong> after each class</li>
               <li><span class="check">✓</span> Athlete thread woven in: resilience, recovery, performance-calm</li>
-              <li><span class="check">✓</span> Theme coverage: <em>Redefining Rest</em> + <em>Mindful body relationship</em> + posture</li>
+              <li><span class="check">✓</span> Inclusivity & Mindfulness themes around relationships with body image and food</li>
             </ul>
 
             <div class="plan-actions">
@@ -437,7 +437,7 @@
           <!-- 12,500 -->
           <article class="plan" aria-label="Athlete plus package">
             <div class="plan-top">
-              <h2 class="plan-title">Athlete + Media Boost</h2>
+              <h2 class="plan-title">Student Athlete Focus + Media Boost</h2>
               <span class="badge">Most impact</span>
             </div>
 
@@ -453,10 +453,10 @@
             <div class="features-label">Includes</div>
             <ul class="features">
               <li><span class="check">✓</span> Everything in Full Semester Program</li>
-              <li><span class="check">✓</span> <strong>10-part short-form video series</strong> (1/week for 10 weeks)</li>
-              <li><span class="check">✓</span> Athlete emphasis: mental health + resilience (for athletic budget alignment)</li>
-              <li><span class="check">✓</span> Optional guest specialist session (e.g., athlete-focused w/ Pete)</li>
-              <li><span class="check">✓</span> Optional embodiment / body gratitude add-on (e.g., Lucid Dawn-inspired)</li>
+              <li><span class="check">✓</span> <strong>20-part short-form video series</strong> (1/week for 20 weeks)</li>
+              <li><span class="check">✓</span> Athlete emphasis: mental health + resilience</li>
+              <li><span class="check">✓</span> Optional guest specialist session (e.g., athlete-focused, yoga therapeutics)</li>
+              <li><span class="check">✓</span> Optional embodiment / body gratitude add-on (e.g., trauma-informed yoga)</li>
             </ul>
 
             <div class="plan-actions">
