Link Fix Student Packages Online Descriptions

--- a/student-packages.html
+++ b/student-packages.html
@@ -301,24 +301,14 @@
   <main class="page">
     <div class="shell">
 
-      <div class="topbar">
-        <a class="brand" href="index.html">Yoga with Lisa</a>
-        <div class="toplinks">
-          <a href="login.html">Sign in</a>
-          <a href="viewplans.html">Membership</a>
-          <a href="index.html">Home</a>
-        </div>
-      </div>
-
       <section class="panel" aria-label="Student Packages">
 
         <div class="header">
           <div class="eyebrow">Student wellness partnership</div>
-          <h1>Grinnell students, meet your semester reset.</h1>
+          <h1>Students, meet your semester reset.</h1>
           <p class="sub">
-            Not just videos — a <strong>curated 9-class library + guided usage plan</strong> built specifically for 18–22 year-old bodies
-            under academic and athletic stress. Think: tech-neck relief, posture repair, nervous system regulation, and
-            a healthier relationship with your body — with Lisa (a Grinnell alum) supporting students live.
+            Not just videos — a <strong>curated 9-class library + guided usage plan</strong> built specifically for students, with an emphasis on students under academic and athletic stress. Think: strength-building relief, posture repair, nervous system reset, and
+            a healthier relationship with your body — with Lisa (a Grinnellian herself) supporting students live.
           </p>
         </div>
 
