--- a/student-packages.html
+++ b/student-packages.html
@@ -308,13 +308,13 @@
           <h1>Students, meet your semester reset.</h1>
           <p class="sub">
             Not just videos — a <strong>curated 9-class library + guided usage plan</strong> built specifically for students, with an emphasis on students under academic and athletic stress. Think: strength-building relief, posture repair, nervous system reset, and
-            a healthier relationship with your body — with Lisa (a Grinnellian herself) supporting students live.
+            a healthier relationship with your body — with Lisa (a Grinnellian) supporting students live.
           </p>
         </div>
 
         <div class="grid">
 
-          <!-- 7,000 -->
+          <!-- 6,000 -->
           <article class="plan plan--cream" aria-label="Starter package">
             <div class="plan-top">
               <h2 class="plan-title">Starter Semester Library</h2>
@@ -322,17 +322,17 @@
             </div>
 
             <div class="price">
-              <div class="price-amount">$7,000</div>
+              <div class="price-amount">$6,000</div>
               <div class="price-unit">per semester</div>
             </div>
 
             <p class="plan-desc">
-              A high-quality foundation: an on-demand mini curriculum students can actually follow (not random classes).
+              A high-quality foundation: an on-demand, curated student-centered curriculum.
             </p>
 
             <div class="features-label">Includes</div>
             <ul class="features">
-              <li><span class="check">✓</span> <strong>9 x 30-minute virtual classes (Hatha, Power Vinyasa & Restorative)</li>
+              <li><span class="check">✓</span> <strong>9 x 30-minute</strong> virtual classes (Hatha, Power Vinyasa & Restorative)</li>
               <li><span class="check">✓</span> <strong>Guided usage plan</strong> (exactly what to take, when, + why)</li>
               <li><span class="check">✓</span> Themes: strength building, stress relief, rest & recovery support</li>
               <li><span class="check">✓</span> Unlimited access for students for the semester</li>
