Student Packages Page Update

--- a/student-packages.html
+++ b/student-packages.html
@@ -307,8 +307,7 @@
           <div class="eyebrow">Student wellness partnership</div>
           <h1>Students, meet your semester reset.</h1>
           <p class="sub">
-            Not just videos — a <strong>curated 9-class library + guided usage plan</strong> built specifically for students, with an emphasis on students under academic and athletic stress. Think: strength-building relief, posture repair, nervous system reset, and
-            a healthier relationship with your body — with Lisa (a Grinnellian) supporting students live.
+            Not just videos — a <strong>curated 9-class library + guided usage plan</strong> built specifically for students.
           </p>
         </div>
 
