Student Packages Typo Fix

--- a/student-packages.html
+++ b/student-packages.html
@@ -331,7 +331,7 @@
 
             <div class="features-label">Includes</div>
             <ul class="features">
-              <li><span class="check">✓</span> <strong>9 x 30-minute</strong> virtual classes (Hatha, Power Vinyasa & Restorative)</li>
+              <li><span class="check">✓</span> <strong>9 x 30-min</strong> virtual classes (Hatha, Power Vinyasa & Restorative)</li>
               <li><span class="check">✓</span> <strong>Guided usage plan</strong> (exactly what to take, when, + why)</li>
               <li><span class="check">✓</span> Themes: strength building, stress relief, rest & recovery support</li>
               <li><span class="check">✓</span> Unlimited access for students for the semester</li>
