Student Packages Text Changes

--- a/student-packages.html
+++ b/student-packages.html
@@ -331,7 +331,7 @@
 
             <div class="features-label">Includes</div>
             <ul class="features">
-              <li><span class="check">✓</span> <strong>9 x 30-min</strong> virtual classes (Hatha, Power Vinyasa & Restorative)</li>
+              <li><span class="check">✓</span> <strong>9-class</strong> curated library + guided plan</li>
               <li><span class="check">✓</span> <strong>Guided usage plan</strong> (exactly what to take, when, + why)</li>
               <li><span class="check">✓</span> Themes: strength building, stress relief, rest & recovery support</li>
               <li><span class="check">✓</span> Unlimited access for students for the semester</li>
@@ -406,9 +406,9 @@
             <ul class="features">
               <li><span class="check">✓</span> <strong>9-class</strong> curated library + guided plan</li>
               <li><span class="check">✓</span> <strong>Weekly live 30-min class</strong> (for the semester)</li>
-              <li><span class="check">✓</span> <strong>Weekly 30-min “Life with Lisa” Q&amp;A</strong> after each class</li>
+              <li><span class="check">✓</span> <strong>Weekly 30-min “Chat with Lisa” Q&amp;A</strong> after each class</li>
               <li><span class="check">✓</span> Athlete thread woven in: resilience, recovery, performance-calm</li>
-              <li><span class="check">✓</span> Inclusivity & Mindfulness themes around relationships with body image and food</li>
+              <li><span class="check">✓</span> Inclusivity & mindfulness themes around relationships with body image and food</li>
             </ul>
 
             <div class="plan-actions">
@@ -442,8 +442,8 @@
             <div class="features-label">Includes</div>
             <ul class="features">
               <li><span class="check">✓</span> Everything in Full Semester Program</li>
-              <li><span class="check">✓</span> <strong>20-part short-form video series</strong> (1/week for 20 weeks)</li>
-              <li><span class="check">✓</span> Athlete emphasis: mental health + resilience</li>
+              <li><span class="check">✓</span> <strong>8-part short-form video series</strong></li>
+              <li><span class="check">✓</span> <strong>Athlete</strong> emphasis: mental health + resilience</li>
               <li><span class="check">✓</span> Optional guest specialist session (e.g., athlete-focused, yoga therapeutics)</li>
               <li><span class="check">✓</span> Optional embodiment / body gratitude add-on (e.g., trauma-informed yoga)</li>
             </ul>
