Student Packages Changes

--- a/student-packages.html
+++ b/student-packages.html
@@ -399,7 +399,7 @@
             </div>
 
             <p class="plan-desc">
-              Your complete “signature” offer: on-demand curriculum + weekly live support + weekly Q&amp;A time with an alum + 10 promotional short-form videos.
+              Your complete “signature” offer: on-demand curriculum + weekly live support + weekly Q&amp;A sessions.
             </p>
 
             <div class="features-label">Includes</div>
@@ -408,7 +408,7 @@
               <li><span class="check">✓</span> <strong>Weekly live 30-min class</strong> (for the semester)</li>
               <li><span class="check">✓</span> <strong>Weekly 30-min “Chat with Lisa” Q&amp;A</strong> after each class</li>
               <li><span class="check">✓</span> Athlete thread woven in: resilience, recovery, performance-calm</li>
-              <li><span class="check">✓</span> Inclusivity & mindfulness themes around relationships with body image and food</li>
+              <li><span class="check">✓</span> 4-part promotional short form videos to centered around themes of inclusivity & mindfulness.</li>
             </ul>
 
             <div class="plan-actions">
