Student Packages Changes Package Updates

--- a/student-packages.html
+++ b/student-packages.html
@@ -363,7 +363,7 @@
             </div>
 
             <p class="plan-desc">
-              Adds live momentum so students actually use the plan (and the campus can market a real event).
+              Adds live momentum so students actually use the plan.
             </p>
 
             <div class="features-label">Includes</div>
@@ -405,10 +405,10 @@
             <div class="features-label">Includes</div>
             <ul class="features">
               <li><span class="check">✓</span> <strong>9-class</strong> curated library + guided plan</li>
+              <li><span class="check">✓</span> 4-part short form video series.</li>
               <li><span class="check">✓</span> <strong>Weekly live 30-min class</strong> (for the semester)</li>
               <li><span class="check">✓</span> <strong>Weekly 30-min “Chat with Lisa” Q&amp;A</strong> after each class</li>
-              <li><span class="check">✓</span> Athlete thread woven in: resilience, recovery, performance-calm</li>
-              <li><span class="check">✓</span> 4-part promotional short form videos to centered around themes of inclusivity & mindfulness.</li>
+              <li><span class="check">✓</span> Athlete thread woven in: resilience, recovery, inclusivity.</li>
             </ul>
 
             <div class="plan-actions">
