One on One Sessions Typo Fix

--- a/yoga-oneonone.html
+++ b/yoga-oneonone.html
@@ -139,14 +139,14 @@
             Single private one-on-one yoga classes for individuals looking to deepen their practice.  
           </p>
           <ul style="margin:0 0 14px 18px; color:#6b6b6b;">
-            <li>A fully customized all-levels 70-95 min yoga & mobility session for $250.</li>
+            <li>A fully customized all-levels 75-90 min yoga & mobility session for $250.</li>
             <li>Guided breathwork & meditation, which can include include yoga nidra, grounding, or visualization work.</li>
             <li>Props can be provided for comfort & optimal alignment.</li>
             <li>A custom follow-up plan delivered within 24–48 hours that includes: your personalized yoga sequence (PDF or video), daily or weekly homework: stretches, mobility drills, or breathwork, and finally a summary of what we worked on & why it matters.</li>
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Private%20Session%20Inquiry">REQUEST QUOTE</a>
-            <a class="btn btn-pill btn-outline" href="login.html">EXPLORE MEMBERSHIP</a>
+            <a class="btn btn-dark btn-pill" href="https://account.venmo.com/u/yogawithlisaai">MAKE A PAYMENT</a>
           </div>
         </div>
       </article>
