Login Venmo Page

--- a/login.html
+++ b/login.html
@@ -104,7 +104,7 @@
 <a class="btn btn-pill btn-dark btn-wide"
    href="https://venmo.com/code?user_id=4476070791219179164&created=1764358269.647224&printed=1"
    target="_blank" rel="noopener noreferrer">
-   Make a donation
+   Contribute with Venmo
 </a>
 
 <!-- Tokens / Crypto -->
