--- a/login.html
+++ b/login.html
@@ -100,18 +100,25 @@
 <a class="btn btn-pill btn-dark btn-wide"
    href="signin.html">Make an account</a>
 
-<!-- Venmo Donation -->
+<!-- Venmo -->
 <a class="btn btn-pill btn-dark btn-wide"
    href="https://venmo.com/code?user_id=4476070791219179164&created=1764358269.647224&printed=1"
    target="_blank" rel="noopener noreferrer">
-   Contribute with Venmo
+   Pay with Venmo
+</a>
+
+<!-- Zelle -->
+<a class="btn btn-pill btn-dark btn-wide"
+   href="images/zelle.jpg"
+   target="_blank" rel="noopener noreferrer">
+   Pay with Zelle
 </a>
 
 <!-- Tokens / Crypto -->
 <a class="btn btn-pill btn-dark btn-wide"
    href="images/crypto.jpg"
    target="_blank" rel="noopener noreferrer">
-   Contribute with Crypto
+   Pay with Crypto
 </a>
 
 <a class="btn btn-pill btn-dark btn-wide" 
