Fix black buttons across pages

--- a/corporate.html
+++ b/corporate.html
@@ -147,7 +147,7 @@
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="corporate-packages.html">VIEW PACKAGES</a>
-            <a class="btn btn-pill btn-outline" href="login.html">WORK WITH ME</a>
+            <a class="btn btn-pill btn-outline" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">WORK WITH ME</a>
           </div>
         </div>
       </article>
@@ -168,7 +168,7 @@
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="student-packages.html">VIEW PACKAGES</a>
-            <a class="btn btn-pill btn-outline" href="login.html">WORK WITH ME</a>
+            <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">WORK WITH ME</a>
           </div>
         </div>
       </article>
@@ -207,7 +207,7 @@
         <li><strong>Add-ons:</strong> live sessions, private events, custom challenges</li>
       </ul>
       <p style="margin:14px 0 0;">
-        Ready to scope? <a href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">Request a custom quote</a>.
+        Ready to scope? <a href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">Email me today</a>.
       </p>
     </div>
   </section>
