--- a/yoga-oneonone.html
+++ b/yoga-oneonone.html
@@ -168,8 +168,8 @@
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Private%20Session%20Inquiry">REQUEST QUOTE</a>
-            <a class="btn btn-pill btn-outline" href="login.html">EXPLORE MEMBERSHIP</a>
-          </div>
+            <a class="btn btn-dark btn-pill" href="https://account.venmo.com/u/yogawithlisaai">MAKE A PAYMENT</a>
+	  </div>
         </div>
       </article>
 
@@ -188,7 +188,7 @@
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Private%20Session%20Inquiry">REQUEST QUOTE</a>
-            <a class="btn btn-pill btn-outline" href="login.html">EXPLORE MEMBERSHIP</a>
+            <a class="btn btn-dark btn-pill" href="https://account.venmo.com/u/yogawithlisaai">MAKE A PAYMENT</a>
           </div>
         </div>
       </article>
