Fix corporate package button

--- a/corporate.html
+++ b/corporate.html
@@ -147,7 +147,7 @@
           </ul>
           <div style="display:flex; gap:10px; flex-wrap:wrap;">
             <a class="btn btn-dark btn-pill" href="corporate-packages.html">VIEW PACKAGES</a>
-            <a class="btn btn-pill btn-outline" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">WORK WITH ME</a>
+            <a class="btn btn-dark btn-pill" href="mailto:lisa@yogawithlisa.ai?subject=Corporate%20Wellness%20Inquiry">WORK WITH ME</a>
           </div>
         </div>
       </article>
