Fix login hierachy

--- a/login.html
+++ b/login.html
@@ -98,7 +98,10 @@
 	<div class="plan-stack">
 
 <a class="btn btn-pill btn-dark btn-wide"
-   href="signin.html">Make an account</a>
+   href="create-account.html">Make an account</a>
+
+<a class="btn btn-pill btn-dark btn-wide"
+   href="viewplans.html">Subscribe Today</a>
 
 <!-- Venmo -->
 <a class="btn btn-pill btn-dark btn-wide"
