Fix signin Google authentication button

--- a/signin.html
+++ b/signin.html
@@ -135,6 +135,25 @@
         </button>
       </form>
 
+<!-- Google sign-in placeholder (wire to Memberstack social login later) -->
+<div class="auth-divider">
+  <span>OR</span>
+</div>
+
+<button class="auth-oauth auth-google" type="button" aria-disabled="true" disabled>
+  <span class="oauth-icon" aria-hidden="true">
+    <!-- Simple Google "G" mark (SVG) -->
+    <svg width="18" height="18" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
+      <path fill="#FFC107" d="M43.611 20.083H42V20H24v8h11.303C33.754 32.658 29.285 36 24 36c-6.627 0-12-5.373-12-12s5.373-12 12-12c3.059 0 5.842 1.154 7.957 3.043l5.657-5.657C34.992 6.053 29.764 4 24 4 12.955 4 4 12.955 4 24s8.955 20 20 20 20-8.955 20-20c0-1.341-.138-2.65-.389-3.917z"/>
+      <path fill="#FF3D00" d="M6.306 14.691l6.571 4.819C14.655 16.108 19.001 12 24 12c3.059 0 5.842 1.154 7.957 3.043l5.657-5.657C34.992 6.053 29.764 4 24 4c-7.682 0-14.35 4.327-17.694 10.691z"/>
+      <path fill="#4CAF50" d="M24 44c5.166 0 9.86-1.977 13.409-5.197l-6.19-5.238C29.211 35.091 26.715 36 24 36c-5.263 0-9.72-3.319-11.287-7.946l-6.522 5.025C9.505 39.556 16.227 44 24 44z"/>
+      <path fill="#1976D2" d="M43.611 20.083H42V20H24v8h11.303a12.02 12.02 0 0 1-4.084 5.565l.003-.002 6.19 5.238C36.971 39.205 44 34 44 24c0-1.341-.138-2.65-.389-3.917z"/>
+    </svg>
+  </span>
+
+  <span class="oauth-text">Continue with Google</span>
+</button>
+
       <div class="auth-meta">
         <p>
           Forgot your password?
