Fix giveback page

--- a/giveback.html
+++ b/giveback.html
@@ -128,7 +128,7 @@
   <h3>Here’s how you can help:</h3>
 
   <ul>
-    <li>✅ Make a tax-deductible donation by selecting the Donate Today button above</li>
+    <li>✅ Donate to our efforts by selecting the Donate Today button above</li>
     <li>✅ Become a corporate sponsor or fund a specific community program</li>
     <li>✅ Share this campaign with colleagues, philanthropic teams, and local partners</li>
   </ul>
