--- a/create-account.html
+++ b/create-account.html
@@ -216,13 +216,24 @@
 
       <button class="btn-primary" type="submit">Create account</button>
 
-      <div class="divider"><span>OR</span></div>
+<!-- OR divider -->
+<div class="or-divider">
+  <span>OR</span>
+</div>
 
-      <!-- Google button MUST be inside this signup form -->
-      <button type="button" class="btn-google" data-ms-auth-provider="google">
-        <span class="google-mark" aria-hidden="true"></span>
-        Continue with Google
-      </button>
+<!-- Google placeholder button (until Memberstack Google is wired up) -->
+<button class="btn btn-google" type="button" disabled aria-disabled="true">
+  <span class="google-icon" aria-hidden="true">
+    <!-- Official-ish Google "G" (inline SVG) -->
+    <svg viewBox="0 0 48 48" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
+      <path fill="#EA4335" d="M24 9.5c3.54 0 6.1 1.53 7.5 2.8l5.1-5.1C33.5 4.4 29.2 2.5 24 2.5 14.6 2.5 6.6 7.9 3 15.7l6.4 5C11 14.6 17 9.5 24 9.5z"/>
+      <path fill="#4285F4" d="M46 24.5c0-1.6-.14-2.8-.45-4.05H24v7.7h12.3c-.25 2-1.6 5-4.6 7l7.1 5.5C43 36.7 46 31.2 46 24.5z"/>
+      <path fill="#FBBC05" d="M9.4 28.3c-.4-1.2-.65-2.5-.65-3.8s.25-2.6.62-3.8l-6.4-5C1.7 18.3 1 21.3 1 24.5s.7 6.2 2 8.8l6.4-5z"/>
+      <path fill="#34A853" d="M24 46.5c5.2 0 9.6-1.7 12.8-4.6l-7.1-5.5c-1.9 1.3-4.4 2.2-5.7 2.2-7 0-13-5.1-14.3-12l-6.4 5C6.6 40.1 14.6 46.5 24 46.5z"/>
+    </svg>
+  </span>
+  Continue with Google
+</button>
 
       <p class="footer" style="margin-bottom:0;">
         Already have an account? <a href="signin.html">Sign in here</a>.
