Add OR divider for Create Account Profile

--- a/create-account.html
+++ b/create-account.html
@@ -216,6 +216,11 @@
 
       <button class="btn-primary" type="submit">Create account</button>
 
+<!-- Google sign-in placeholder (wire to Memberstack social login later) -->
+<div class="auth-divider">
+  <span>OR</span>
+</div>
+
 <!-- Google placeholder button (until Memberstack Google is wired up) -->
 <button class="btn btn-google" type="button" disabled aria-disabled="true">
   <span class="google-icon" aria-hidden="true">
