Update OR divider style

--- a/create-account.html
+++ b/create-account.html
@@ -222,7 +222,7 @@
 </div>
 
 <!-- Google placeholder button (until Memberstack Google is wired up) -->
-<button class="btn btn-google" type="button" disabled aria-disabled="true">
+<button class="google-btn" type="button" disabled aria-disabled="true">
   <span class="google-icon" aria-hidden="true">
     <!-- Official-ish Google "G" (inline SVG) -->
     <svg viewBox="0 0 48 48" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
