Update OR divider style and G button on signin pages

--- a/viewplans.html
+++ b/viewplans.html
@@ -366,7 +366,7 @@
 
             <div class="plan-actions">
               <!-- Link this to your monthly Stripe checkout / Memberstack checkout -->
-              <a class="btn btn-primary" href="signin.html">Start Free Trial</a>
+              <a class="btn btn-primary" href="create-account.html">Start Free Trial</a>
               <a class="btn btn-ghost" href="index.html#testimonials">See Reviews</a>
             </div>
           </article>
@@ -399,7 +399,7 @@
 
             <div class="plan-actions">
               <!-- Link this to your yearly Stripe checkout / Memberstack checkout -->
-              <a class="btn btn-primary" href="signin.html">Start Free Trial</a>
+              <a class="btn btn-primary" href="create-account.html">Start Free Trial</a>
               <a class="btn btn-ghost" href="mailto:lisa@yogawithlisa.ai?subject=Yearly%20Plan%20Question">Ask a Question</a>
             </div>
           </article>
