--- a/create-account.html
+++ b/create-account.html
@@ -223,7 +223,7 @@
 
 <!-- Google placeholder button (until Memberstack Google is wired up) -->
 <button class="google-btn" type="button" disabled aria-disabled="true">
-  <span class="google-icon" aria-hidden="true">
+  <span class="oauth-icon" aria-hidden="true">
     <!-- Official-ish Google "G" (inline SVG) -->
     <svg viewBox="0 0 48 48" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
       <path fill="#EA4335" d="M24 9.5c3.54 0 6.1 1.53 7.5 2.8l5.1-5.1C33.5 4.4 29.2 2.5 24 2.5 14.6 2.5 6.6 7.9 3 15.7l6.4 5C11 14.6 17 9.5 24 9.5z"/>
