Update Create Account G button style

--- a/create-account.html
+++ b/create-account.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Create account • Yoga with Lisa</title>
+  <title>Create account | Yoga with Lisa</title>
 
   <style>
     :root{
@@ -43,7 +43,7 @@
 
     h1{
       font-family: ui-serif, Georgia, "Times New Roman", Times, serif;
-      font-size:56px;
+      font-size:36px;
       line-height:1.02;
       margin:0 0 10px;
       letter-spacing:-0.02em;
@@ -186,7 +186,7 @@
 <body>
   <main class="card">
     <h1>Create account</h1>
-    <p class="sub">Create an account to access your member content, class library, and saved plans.</p>
+    <p class="sub">Create an account to access our yoga and meditation content library and progress tracking tools.</p>
 
     <!-- Memberstack SIGNUP form -->
     <form data-ms-form="signup">
@@ -210,21 +210,20 @@
 
         <label class="check">
           <input type="checkbox" />
-          <span>Add me to the newsletter / product updates.</span>
+          <span>Add me to the newsletter & send product updates.</span>
         </label>
       </div>
 
       <button class="btn-primary" type="submit">Create account</button>
 
-<!-- Google sign-in placeholder (wire to Memberstack social login later) -->
+<!-- Divider -->
 <div class="auth-divider">
   <span>OR</span>
 </div>
 
-<!-- Google placeholder button (until Memberstack Google is wired up) -->
-<button class="google-btn" type="button" disabled aria-disabled="true">
+<!-- Google sign-in placeholder -->
+<button class="auth-oauth" type="button" disabled aria-disabled="true">
   <span class="oauth-icon" aria-hidden="true">
-    <!-- Official-ish Google "G" (inline SVG) -->
     <svg viewBox="0 0 48 48" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
       <path fill="#EA4335" d="M24 9.5c3.54 0 6.1 1.53 7.5 2.8l5.1-5.1C33.5 4.4 29.2 2.5 24 2.5 14.6 2.5 6.6 7.9 3 15.7l6.4 5C11 14.6 17 9.5 24 9.5z"/>
       <path fill="#4285F4" d="M46 24.5c0-1.6-.14-2.8-.45-4.05H24v7.7h12.3c-.25 2-1.6 5-4.6 7l7.1 5.5C43 36.7 46 31.2 46 24.5z"/>
