Update style block in create account file

--- a/create-account.html
+++ b/create-account.html
@@ -4,12 +4,20 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Create account | Yoga with Lisa</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <main class="card">
     <h1>Create account</h1>
     <p class="sub">Create an account to access our yoga and meditation content library and progress tracking tools.</p>
+
+<!-- Memberstack -->
+  <script
+    data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in"
+    src="https://static.memberstack.com/scripts/v1/memberstack.js"
+    type="text/javascript">
+  </script>
 
     <!-- Memberstack SIGNUP form -->
     <form data-ms-form="signup">
