--- a/create-account.html
+++ b/create-account.html
@@ -5,19 +5,172 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Create account | Yoga with Lisa</title>
   <link rel="stylesheet" href="style.css" />
+
+<style>
+  :root{
+    --bg: #efe9dc;
+    --card: #ffffff;
+    --ink: #121212;
+    --muted: rgba(0,0,0,.62);
+    --line: rgba(0,0,0,.10);
+    --radius: 28px;
+  }
+
+  body{
+    margin:0;
+    background: var(--bg);
+    color: var(--ink);
+    -webkit-font-smoothing: antialiased;
+    font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+  }
+
+  .auth-wrap{
+    min-height: 100vh;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    padding: 32px 18px;
+  }
+
+  .auth-card{
+    width: 100%;
+    max-width: 560px;
+    background: var(--card);
+    border-radius: var(--radius);
+    padding: 44px 46px 28px;
+    box-shadow: 0 8px 30px rgba(0,0,0,.06);
+  }
+
+  .auth-title{
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 64px;
+    line-height: 1;
+    margin: 0 0 10px;
+    letter-spacing: -0.02em;
+  }
+
+  .auth-subtitle{
+    margin: 0 0 28px;
+    color: var(--muted);
+    font-size: 18px;
+    line-height: 1.5;
+  }
+
+  form[data-ms-form]{
+    display:flex;
+    flex-direction:column;
+    gap: 16px;
+  }
+
+  label{
+    font-weight: 650;
+    margin-top: 4px;
+    margin-bottom: -8px;
+  }
+
+  input[type="text"],
+  input[type="email"],
+  input[type="password"]{
+    width: 100%;
+    box-sizing: border-box;
+    padding: 16px 18px;
+    border-radius: 999px;
+    border: 1.5px solid rgba(0,0,0,.18);
+    outline: none;
+    font-size: 18px;
+    background:#fff;
+  }
+
+  input:focus{
+    border-color: rgba(0,0,0,.35);
+    box-shadow: 0 0 0 3px rgba(0,0,0,.06);
+  }
+
+  .checks{
+    display:flex;
+    flex-direction:column;
+    gap: 12px;
+    margin-top: 6px;
+  }
+
+  .check{
+    display:flex;
+    gap: 12px;
+    align-items:flex-start;
+    color: rgba(0,0,0,.72);
+    line-height: 1.35;
+    font-size: 16px;
+  }
+
+  .check input{
+    margin-top: 3px;
+    width: 18px;
+    height: 18px;
+    accent-color: #111;
+  }
+
+  .check a{
+    color: rgba(0,0,0,.78);
+    text-decoration: underline;
+    text-underline-offset: 3px;
+  }
+
+  .btn-primary{
+    margin-top: 10px;
+    width: 100%;
+    border: none;
+    border-radius: 999px;
+    padding: 18px 20px;
+    background: #0b0b0b;
+    color: #fff;
+    font-weight: 700;
+    font-size: 20px;
+    cursor: pointer;
+  }
+  .btn-primary:hover{ filter: brightness(1.02); }
+  .btn-primary:active{ transform: translateY(1px); }
+
+  .auth-links{
+    margin-top: 14px;
+    text-align:center;
+    color: rgba(0,0,0,.55);
+    font-size: 18px;
+  }
+
+  .auth-links a{
+    color: rgba(0,0,0,.75);
+    text-decoration: underline;
+    text-underline-offset: 3px;
+  }
+
+  .auth-footer{
+    margin-top: 26px;
+    padding-top: 18px;
+    text-align:center;
+    color: rgba(0,0,0,.65);
+    font-size: 16px;
+    border-top: 1px solid var(--line);
+  }
+
+  .auth-footer a{
+    color: rgba(0,0,0,.75);
+    text-decoration: underline;
+    text-underline-offset: 3px;
+  }
+
+  @media (max-width: 520px){
+    .auth-card{ padding: 34px 22px 22px; }
+    .auth-title{ font-size: 48px; }
+    .auth-subtitle{ font-size: 16px; }
+  }
+</style>
+
 </head>
 
 <body>
   <main class="card">
     <h1>Create account</h1>
     <p class="sub">Create an account to access our yoga and meditation content library and progress tracking tools.</p>
-
-<!-- Memberstack -->
-  <script
-    data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in"
-    src="https://static.memberstack.com/scripts/v1/memberstack.js"
-    type="text/javascript">
-  </script>
 
     <!-- Memberstack SIGNUP form -->
     <form data-ms-form="signup">
@@ -34,14 +187,14 @@
         <label class="check">
           <input type="checkbox" required />
           <span>
-            I agree to the <a href="TERMS_URL" target="_blank" rel="noopener">Terms</a> &amp;
-            <a href="PRIVACY_URL" target="_blank" rel="noopener">Privacy Policy</a>.
+            I agree to the <a href="terms.html" target="_blank" rel="noopener">Terms</a> &amp;
+            <a href="privacy.html" target="_blank" rel="noopener">Privacy Policy</a>.
           </span>
         </label>
 
         <label class="check">
           <input type="checkbox" />
-          <span>Add me to the newsletter & send product updates.</span>
+          <span>Add me to the newsletter &amp; send me updates!</span>
         </label>
       </div>
 
@@ -71,17 +224,13 @@
     </form>
 
     <div class="bottom-links">
-      <a href="/">Back to Home</a>
+      <a href="index.html">Back to Home</a>
       <span class="dot">•</span>
-      <a href="PRIVACY_URL">Privacy Policy</a>
+      <a href="privacy.html">Privacy Policy</a>
       <span class="dot">•</span>
-      <a href="TERMS_URL">Terms</a>
+      <a href="terms.html">Terms</a>
     </div>
   </main>
 
-  <!-- Memberstack script: keep YOUR existing one from signin.html (paste it here) -->
-  <!-- Example format (do not use unless it matches your project):
-  <script src="https://static.memberstack.com/scripts/v1/memberstack.js" data-memberstack-id="YOUR_ID"></script>
-  -->
 </body>
 </html>
