--- a/create-account.html
+++ b/create-account.html
@@ -34,10 +34,10 @@
 
   .auth-card{
     width: 100%;
-    max-width: 560px;
+    max-width: 510px;
     background: var(--card);
     border-radius: var(--radius);
-    padding: 44px 46px 28px;
+    padding: 40px 34px 24px;
     box-shadow: 0 8px 30px rgba(0,0,0,.06);
   }
 
@@ -131,10 +131,11 @@
   .btn-primary:active{ transform: translateY(1px); }
 
   .auth-links{
-    margin-top: 14px;
+    margin-top: 16px;
     text-align:center;
     color: rgba(0,0,0,.55);
     font-size: 18px;
+    line-height:1.5;
   }
 
   .auth-links a{
@@ -144,12 +145,12 @@
   }
 
   .auth-footer{
-    margin-top: 26px;
+    margin-top: 22px;
     padding-top: 18px;
-    text-align:center;
+    text-align: center;
     color: rgba(0,0,0,.65);
     font-size: 16px;
-    border-top: 1px solid var(--line);
+    border-top: 1px solid rgba(0,0,0,.10);
   }
 
   .auth-footer a{
