Update style for create account bottom links

--- a/create-account.html
+++ b/create-account.html
@@ -219,18 +219,16 @@
   Continue with Google
 </button>
 
-      <p class="footer" style="margin-bottom:0;">
-        Already have an account? <a href="signin.html">Sign in here</a>.
-      </p>
-    </form>
+<div class="auth-links">
+  Already have an account? <a href="signin.html">Sign in here.</a>
+</div>
 
-    <div class="bottom-links">
-      <a href="index.html">Back to Home</a>
-      <span class="dot">•</span>
-      <a href="privacy.html">Privacy Policy</a>
-      <span class="dot">•</span>
-      <a href="terms.html">Terms</a>
-    </div>
+<div class="auth-footer">
+  <a href="index.html">Back to Home</a> &nbsp; • &nbsp;
+  <a href="privacy.html">Privacy Policy</a> &nbsp; • &nbsp;
+  <a href="terms.html">Terms</a>
+</div>
+
   </main>
 
 </body>
