create account iteration 46572

--- a/create-account.html
+++ b/create-account.html
@@ -34,10 +34,11 @@
 
   .auth-card{
     width: 100%;
-    max-width: 510px;
+    max-width: 560px;
+    margin: 0 auto;
     background: var(--card);
     border-radius: var(--radius);
-    padding: 40px 34px 24px;
+    padding: 34px 22px 22px;
     box-shadow: 0 8px 30px rgba(0,0,0,.06);
   }
 
