update YWL Futures campaign

--- a/giveback.html
+++ b/giveback.html
@@ -17,7 +17,7 @@
 <!-- Memberstack webflow package -->
 <script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
 <!-- Open Graph Meta Tags -->
-<meta property="og:title" content="YogawithLisa Futures Foundation">
+<meta property="og:title" content="YogawithLisa Futures">
 <meta property="og:description" content="Making accessible for yoga for kids, people living with disabilities, and the elderly.">
 <meta property="og:image" content="https://www.yogawithlisa.ai/images/yogaforkids.jpg">
 <meta property="og:url" content="https://www.yogawithlisa.ai">
@@ -100,13 +100,13 @@
   <h2 class="visually-hidden">Explore</h2>
 <div class="in-person-classes-head">
      <h2 style="text-align:center; font-family:'Playfair Display', serif; font-size:2.2rem; margin-bottom:40px;">
-    YogawithLisa Futures Foundation 
+    YogawithLisa Futures Initiative
   </h2>
     <p class="sub">
 
   <p>Welcome!</p>
 
-  <p>On behalf of the YogaWithLisa Futures Foundation, I would love to invite you to support our mission of expanding access to free, inclusive yoga and meditation for children, families, seniors, and community members across the Bay Area.</p>
+  <p>On behalf of the YogaWithLisa Futures Initiative, I would love to invite you to support our mission of expanding access to free, inclusive yoga and meditation for children, families, seniors, and community members across the Bay Area.</p>
 
   <p>As an organization dedicated to supporting health and well-being, we strive to ensure that every child and adult, regardless of income, ability, or background, has access to supportive movement practices that improve health and quality of life. However, we cannot do this alone. With your generous support, we can continue to offer programs that make a lasting, measurable impact on families throughout our community.</p>
 
@@ -117,7 +117,7 @@
   <p>We are working to raise <strong>$50,000</strong> to launch and sustain a series of free community wellness initiatives throughout San Francisco, Berkeley, and Oakland. This includes:</p>
 
   <ul>
-    <li>Free yoga classes for kids experiencing anxiety, learning differences, or focus challenges</li>
+    <li>Yogas for kids experiencing anxiety, learning differences, or focus challenges</li>
     <li>Chair-yoga and adaptive yoga for seniors and people with disabilities</li>
     <li>Weekly community classes at local parks and studio spaces</li>
     <li>Yoga props and equipment (mats, blocks, straps, sensory supports) for participants</li>
@@ -128,7 +128,7 @@
   <h3>Here’s how you can help:</h3>
 
   <ul>
-    <li>✅ Donate to our efforts by selecting the Donate Today button above</li>
+    <li>✅ Donate to our efforts by <a href="zelle.jpg">here.</a></li>
     <li>✅ Become a corporate sponsor or fund a specific community program</li>
     <li>✅ Share this campaign with colleagues, philanthropic teams, and local partners</li>
   </ul>
@@ -141,7 +141,7 @@
 
   <p><strong>Thank you!</strong><br>
   Dr. Lisa Eshun-Wilson<br>
-  Founder | YogaWithLisa Futures Foundation</p>
+  Founder | Yoga with Lisa</p>
 
 </div>
 
