--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -182,7 +182,7 @@
         <span class="nowrap">Meet me on the <em>mat</em>.</span><br/>
       </h1>
       <div class="hero-ctas">
-        <a class="btn btn-dark btn-pill" href="login.html">FOLLOW OUR NEWSLETTER</a>
+        <a class="btn btn-dark btn-pill" href="https://meet.yogawithlisa.ai">JOIN US LIVE</a>
         <a class="btn btn-dark btn-pill btn-wide"
            href="https://join.slack.com/t/yogawithlisa/shared_invite/zt-3ftkru3hx-wlWSt1RYzyfNVIt0LK1HXA"
            target="_blank" rel="noopener">
