Add Slack link title update

--- a/yoga-inperson.html
+++ b/yoga-inperson.html
@@ -186,7 +186,7 @@
         <a class="btn btn-dark btn-pill btn-wide"
            href="https://join.slack.com/t/yogawithlisa/shared_invite/zt-3ftkru3hx-wlWSt1RYzyfNVIt0LK1HXA"
            target="_blank" rel="noopener">
-          JOIN OUR SLACK COMMUNITY
+          JOIN OUR SLACK
         </a>
       </div>
     </div>
