--- a/index.html
+++ b/index.html
@@ -332,10 +332,10 @@
           ★★★★★
         </div>
         <p class="testimonial-text">
-          “Review.”
+          “Lisa is a dedicated, kind and communicative yogi. I've had the pleasure of working with her both when she has volunteered at the studio and when she took our 200-hour teacher training. She has also rented space from the studio to offer her own yoga classes and each time has been easy to communicate and coordinate with, flexible around scheduling needs and attentive to studio policies and procedures. She always leaves the space neat and tidy and has been a pleasure to work with.”
         </p>
         <p class="testimonial-author">
-          — Sandy Jones, Founder, Beach Glass Hot Yoga & Pilates, Noe Valley, San Francisco, CA 
+          — Antonia Blumberg, Studio Manager, Green Yogi, Berkeley, CA 
         </p>
       </article>
 
