--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
         <div class="connect-banner__actions">
 
       <a class="btn btn-dark btn-pill"
-         href="signin.html">
-        JOIN OUR NEWSLETTER
+         href="create-account.html">
+        SUBSCRIBE
       </a>
 
       </div>
