Clickable google button

--- a/index.html
+++ b/index.html
@@ -377,6 +377,11 @@
           <img src="images/icons/email.svg" alt="">
         </a>
 
+      <a href="https://calendly.com/lisaeshunwilson/30min"
+         class="icon-btn">
+        <img src="images/icons/calendar.svg" alt="Email">
+      </a>
+
         <a href="https://x.com/yogawithlisaai" target="_blank" rel="noopener"
            class="icon-btn" aria-label="X / Twitter">
           <img src="images/icons/x-twitter.svg" alt="">
