--- a/signin.html
+++ b/signin.html
@@ -140,7 +140,11 @@
   <span>OR</span>
 </div>
 
-<button class="auth-oauth auth-google" type="button" aria-disabled="true" disabled>
+<button
+  class="auth-oauth"
+  type="button"
+  data-ms-auth-provider="google"
+>
   <span class="oauth-icon" aria-hidden="true">
     <!-- Simple Google "G" mark (SVG) -->
     <svg width="18" height="18" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg">
