--- a/create-account.html
+++ b/create-account.html
@@ -6,6 +6,10 @@
   <title>Create account | Yoga with Lisa</title>
   <link rel="stylesheet" href="style.css" />
 
+<!-- Memberstack webflow package -->
+<script data-memberstack-app="app_cmfs64j5s00jl0wu4h1ee40in" src="https://static.memberstack.com/scripts/v1/memberstack.js" type="text/javascript"></script>
+
+
 <style>
   :root{
     --bg: #efe9dc;
@@ -207,7 +211,11 @@
 </div>
 
 <!-- Google sign-in placeholder -->
-<button class="auth-oauth" type="button" disabled aria-disabled="true">
+<button
+  class="auth-oauth"
+  type="button"
+  data-ms-auth-provider="google"
+>
   <span class="oauth-icon" aria-hidden="true">
     <svg viewBox="0 0 48 48" width="20" height="20" xmlns="http://www.w3.org/2000/svg">
       <path fill="#EA4335" d="M24 9.5c3.54 0 6.1 1.53 7.5 2.8l5.1-5.1C33.5 4.4 29.2 2.5 24 2.5 14.6 2.5 6.6 7.9 3 15.7l6.4 5C11 14.6 17 9.5 24 9.5z"/>
